finished home work project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,51 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <section class="top-content"> 
+        <div class="half-content intro"> 
+            <h2>Hello I'm</h2>
+            <h3><span class="name-color">Abdullah Al Marzan</span> from Rangpur</h3>
+            <p>You might show me jumping climbing building and stoping tranins. But nobody pays me dollor for those work</p>
+            <a href="#">HIRE ME</a>
+        </div>
+        <div class="half-content"> 
+            <img src="images/peter.png" alt="">
+        </div>
+    </section>
+    <section class="semiTop-content"> 
+        <div class="half-content"> 
+            <img src="images/peter_dream.png" alt="">
+        </div>
+        <div class="half-content biography"> 
+            <h2>Biography</h2>
+            <p>This is Abdullah Al Marzan. Currently study on Dr M A Wazed Miah Textile Engineering college. Here Mainly student are learning about textilte related subject. But I want to learn coding. Hence I am learning web development. Currentle my level is at begginner level. I am not at html and css level....</p>
+            <a href="#">Download CV</a>
+        </div>
+    </section>
+    <section class="middle-content"> 
+        <h2>My Latest Work</h2>
+        <div class="container"> 
+            <img src="images/latest-work/work-1.png" alt="">
+            <img src="images/latest-work/work-2.jpg" alt="">
+            <img src="images/latest-work/work-3.jpg" alt="">
+        </div>
+    </section>
+    <section class="final-content"> 
+        <div class="all-content"> 
+            <h2>What client are say</h2>
+            <div class="designation"> 
+                <h3>Bruce lorrence</h3>
+                <p>Founder &amp; CEO of the Head Minister</p>
+            </div>
+            <p>The Project is not as much good as professional level. But if the project creator practice more and more then after some of the days he will end up with a successful carier..</p>
+        </div>
+        <div class="inside-section"> 
+            <p>Leave us a message in the email section</p>
+            <a href="mailtomarzandwntec@gmail.com" target="_blanck">marzandwmtec@gmail.com</a>
+        </div>
+    </section>
+    <footer> 
+        <p>All Right is Reserved &copy; 2022 to the year</p>
+    </footer>
 </body>
 </html>
